push code marvelquiz

--- a/src/App.css
+++ b/src/App.css
@@ -91,7 +91,7 @@ main {
   background-position: center center;
   display: flex;
   justify-content: space-between;
-  height: 500px;
+  height: 47rem;
 }
 
 .startingImg {
